graph page edit

--- a/graph.html
+++ b/graph.html
@@ -99,18 +99,8 @@
             <div id="curve_chart" class="curve-chart"></div>
         </div>
         <div class="col-md-2">
-              <div class="form-group">
-                <label for="columnLeng">Довжина колони</label>
-                <input type="number" class="form-control" id="columnLeng" placeholder="Довжина колони">
-              </div>
-              <div class="form-group">
-                <label for="columnDiam">Діаметр колони</label>
-                <input type="number" class="form-control" id="columnDiam" placeholder="Діаметр колони">
-              </div>
-            <button type="submit" class="btn first-button btn-default">Зберегти</button>
-            <a href="#">
-                <button type="submit" class="btn first-button btn-default">Згвинчування / Розкручування</button>
-            </a>
+            <button type="submit" class="btn first-button btn-default">Скручування</button>
+            <button type="submit" class="btn first-button btn-default">Розкручування</button>
              <a href="#">
                 <button type="submit" class="btn first-button btn-default">Завершено</button>
             </a>
